--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- 0. API 키 입력 화면 -->
         <div id="api-key-view" class="view space-y-4">
             <h2 class="text-lg font-semibold text-center text-gray-700">시작하기 전에! 🔑</h2>
-            <p class="text-center text-sm text-gray-500">Gemini API 키를 입력해주세요. 키는 브라우저에만 안전하게 저장돼요.</p>
+            <p class="text-center text-sm text-gray-500">Gemini API 키를 입력해주세요.</p>
             <input type="password" id="api-key-input" placeholder="여기에 API 키를 붙여넣으세요" class="w-full border-2 border-gray-300 p-3 rounded-xl focus:ring-2 focus:ring-[#4a90e2] focus:border-[#4a90e2] transition">
             <button id="save-api-key-button" class="w-full bg-[#4a90e2] text-white font-bold py-4 px-6 rounded-xl text-lg hover:bg-[#005a9c] hover:shadow-lg transition-all transform hover:scale-105">저장하고 시작하기! ✨</button>
         </div>
@@ -442,6 +442,7 @@
     </script>
 </body>
 </html>
+
 
 
 
